syntax = "proto3";

package gameplay;

message FollowRequest {
    string userId = 1;
    string followedUserId = 2;
}